--- a/app/containers/HomePage/HomePage.css
+++ b/app/containers/HomePage/HomePage.css
@@ -1,8 +1,14 @@
 .run-info {
   display: inline-block;
-  width: 200px;
-  border: 2px dashed #1b1a19;
+  width: 250px;
+  border: 2px dashed #595959;
   justify-content: space-between;
   padding: 10px;
   margin: 10px;
+}
+
+.pet {
+  text-align: center;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #595959;
 }
